登录界面绘制。

--- a/app/src/main/res/layout/main_content_lay.xml
+++ b/app/src/main/res/layout/main_content_lay.xml
@@ -8,70 +8,179 @@
     android:orientation="vertical"
     >
     <LinearLayout
-
         android:layout_width="match_parent"
         android:orientation="vertical"
+        android:gravity="center_horizontal"
         android:layout_height="wrap_content">
-    <com.ruomm.base.view.menutopview.MenuTopView
-        android:id="@id/mymenutop"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/menutop_height"
-        android:background="@color/AllTransparent"
-        app:imageLeft="@mipmap/home_set"
-        app:menuButtomLineColor="@color/menutop_bottomline_color"
-        app:menuImageSizePercent="0.6"
-        app:menuPaddinghorizontal="@dimen/menutop_padding"
-        app:menuTextColor="@color/menutop_textcenter_color"
-        app:menuTextSize="@dimen/menutop_textsize"
-        app:textLeft_Color="@color/menutop_textsider_color"
-        app:textLeft_Size="@dimen/menutop_textsize_small"
-        app:textRight_Color="@color/menutop_textsider_color"
-        app:textRight_Size="@dimen/menutop_textsize_small"
-        >
-    </com.ruomm.base.view.menutopview.MenuTopView>
-    <View
-        android:layout_width="0dp"
-        android:layout_height="20dp"/>
-    <LinearLayout
-        android:layout_marginRight="@dimen/dpx020"
-        android:layout_marginLeft="@dimen/dpx020"
-        android:background="@drawable/main_content_bg"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="1000dp">
-        <com.ruomm.base.view.percentview.LinearLayout_PercentHeight
-            android:id="@+id/ly_ylqr"
+        <com.ruomm.base.view.menutopview.MenuTopView
+            android:id="@id/mymenutop"
             android:layout_width="match_parent"
-            android:background="@mipmap/main_menu_help"
-            android:orientation="horizontal"
+            android:layout_height="@dimen/menutop_height"
+            android:background="@color/AllTransparent"
+            app:imageLeft="@mipmap/home_set"
+            app:menuButtomLineColor="@color/menutop_bottomline_color"
+            app:menuImageSizePercent="0.6"
+            app:menuPaddinghorizontal="@dimen/menutop_padding"
+            app:menuTextColor="@color/menutop_textcenter_color"
+            app:menuTextSize="@dimen/menutop_textsize"
+            app:textLeft_Color="@color/menutop_textsider_color"
+            app:textLeft_Size="@dimen/menutop_textsize_small"
+            app:textRight_Color="@color/menutop_textsider_color"
+            app:textRight_Size="@dimen/menutop_textsize_small"
+            >
+        </com.ruomm.base.view.menutopview.MenuTopView>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="20dp"/>
+        <LinearLayout
+            android:layout_marginRight="@dimen/dpx020"
+            android:layout_marginLeft="@dimen/dpx020"
+            android:background="@drawable/main_content_bg"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+            <com.ruomm.base.view.percentview.LinearLayout_PercentHeight
+                android:id="@+id/ly_ylqr"
+                android:layout_width="match_parent"
                 android:orientation="horizontal"
-                android:gravity="center"
-                >
-                <ImageView
-                    android:src="@mipmap/scan"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="horizontal"
-                android:gravity="center"
-                >
-                <ImageView
-                    android:src="@mipmap/paymentcode"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    >
+                    <ImageView
+                        android:id="@+id/img_scan"
+                        android:src="@mipmap/scan"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    >
+                    <ImageView
+                        android:id="@+id/img_paymentcode"
+                        android:src="@mipmap/paymentcode"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
 
-        </com.ruomm.base.view.percentview.LinearLayout_PercentHeight>
-    </LinearLayout>
+            </com.ruomm.base.view.percentview.LinearLayout_PercentHeight>
+            <LinearLayout
+                android:id="@+id/ly_login"
+                android:layout_marginTop="@dimen/dpx016"
+                android:layout_marginBottom="@dimen/dpx016"
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:background="@mipmap/home_login"
+                android:layout_height="wrap_content">
+                <TextView
+                    style="@style/textWhite"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="请立即登录您的账户"
+                    />
+            </LinearLayout>
+            <com.ruomm.base.view.percentview.FrameLayout_PercentHeight
+                android:id="@+id/ly_homead"
+                android:layout_width="match_parent"
+                android:layout_height="100dp">
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/mViewPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                </android.support.v4.view.ViewPager>
+                <ImageView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/image_corners_10"
+                    ></ImageView>
+            </com.ruomm.base.view.percentview.FrameLayout_PercentHeight>
+
+            <com.ruomm.base.view.dottabstripview.DotTabStripView
+                android:id="@+id/dotTabStripView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dpx016"
+                app:dotImage="@drawable/home_dot_selector"
+                app:dotImageSize="@dimen/dpx012"
+                app:dotImageMargin="@dimen/dpx024"
+                >
+
+            </com.ruomm.base.view.dottabstripview.DotTabStripView>
+
+            <com.ruomm.base.view.InScrollViewGridView
+                android:id="@+id/mGridView"
+                style="@style/listStyle.WrapNoDivider"
+                android:numColumns="3"
+                android:verticalSpacing="10dp"
+                android:horizontalSpacing="10dp"
+                android:stretchMode="columnWidth"
+                android:gravity="center"
+                />
+            <!--android:numColumns="3"-->
+            <!--android:verticalSpacing="10dp"-->
+            <!--android:horizontalSpacing="10dp"-->
+            <!--android:stretchMode="columnWidth"-->
+            <!--android:gravity="center"-->
+            <!--<com.ruomm.base.view.percentview.LinearLayout_PercentHeight-->
+                <!--android:id="@+id/ly_function"-->
+                <!--android:layout_marginTop="@dimen/dpx016"-->
+                <!--android:layout_marginBottom="@dimen/dpx016"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:gravity="center"-->
+                <!--android:orientation="horizontal"-->
+                <!--android:layout_height="wrap_content">-->
+                <!--<LinearLayout-->
+                    <!--android:layout_width="0dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:orientation="vertical"-->
+                    <!--android:layout_weight="1"-->
+                    <!--&gt;-->
+                    <!--<ImageView-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:src="@mipmap/home_fun_qrcodepament"-->
+                        <!--/>-->
+                <!--</LinearLayout>-->
+                <!--<LinearLayout-->
+                    <!--android:layout_width="0dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:orientation="vertical"-->
+                    <!--android:layout_weight="1"-->
+                    <!--&gt;-->
+                    <!--<ImageView-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:src="@mipmap/home_fun_qrcodepament"-->
+                        <!--/>-->
+                <!--</LinearLayout>-->
+                <!--<LinearLayout-->
+                    <!--android:layout_width="0dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:orientation="vertical"-->
+                    <!--android:layout_weight="1"-->
+                    <!--&gt;-->
+                    <!--<ImageView-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:src="@mipmap/home_fun_qrcodepament"-->
+                        <!--/>-->
+                <!--</LinearLayout>-->
+            <!--</com.ruomm.base.view.percentview.LinearLayout_PercentHeight>-->
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
