--- a/baseappresource/src/main/res/drawable/btn_bg_xml.xml
+++ b/baseappresource/src/main/res/drawable/btn_bg_xml.xml
@@ -3,22 +3,21 @@
     android:shape="rectangle">
 
     <!-- 填充的颜色：这里设置背景透明 -->
-    <solid android:color="#FFFFFFFF" />
+    <solid android:color="#EEF3FA" />
     <!-- 边框的颜色 ：不能和窗口背景色一样 -->
 
     <!-- 设置按钮的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
     <corners
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp" />
-
+        android:bottomLeftRadius="@dimen/dpx010"
+        android:bottomRightRadius="@dimen/dpx010"
+        android:topLeftRadius="@dimen/dpx010"
+        android:topRightRadius="@dimen/dpx010" />
     <!-- padding：Button里面的文字与Button边界的间隔 -->
-  <!--  <padding
-        android:bottom="10dp"
-        android:left="10dp"
-        android:right="10dp"
-    android:top="10dp" />-->
+  <padding
+        android:bottom="@dimen/dpx016"
+        android:left="@dimen/dpx016"
+        android:right="@dimen/dpx016"
+        android:top="@dimen/dpx016" />
 
 </shape>
