--- a/app/src/main/res/layout/lyt_keyboard.xml
+++ b/app/src/main/res/layout/lyt_keyboard.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <android.inputmethodservice.KeyboardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/kv_lyt_keyboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:background="#999"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -13,3 +15,4 @@
         android:shadowColor="#00000000"
         android:keyPreviewHeight="100dp"
         android:keyPreviewLayout="@layout/lyt_preview"/>
+</RelativeLayout>
