--- a/app/src/main/res/layout/lyt_keyboard.xml
+++ b/app/src/main/res/layout/lyt_keyboard.xml
@@ -42,7 +42,7 @@
     </RelativeLayout>
     <FrameLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#999"
+        android:background="#ddd"
         android:id="@+id/kv_lyt_container"
         >
         <android.inputmethodservice.KeyboardView
@@ -53,7 +53,7 @@
             android:layout_alignParentBottom="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:keyBackground="@drawable/keyboard_keybg"
+            android:keyBackground="@drawable/keyboard_keybg_selector"
             android:keyTextColor="#333"
             android:shadowColor="#00000000"
             android:keyPreviewHeight="100dp"
