九宫格绘制。

--- a/baselibrary/src/main/res/values/attrs.xml
+++ b/baselibrary/src/main/res/values/attrs.xml
@@ -247,7 +247,7 @@
         <attr name="sidebar_textIsbold" format="boolean" />
         <attr name="sidebar_textMaxSize" format="dimension" />
     </declare-styleable>
-    <!-- 自定义MenuTopView的属性 -->
+    <!-- 自定义TagTextView的属性 -->
     <declare-styleable name="TagTextView">
         <attr name="tagtv_textPadding" format="dimension" />
         <attr name="tagtv_textColor" format="color" />
@@ -281,5 +281,12 @@
         <attr name="ruler_smallMarkWidth" format="dimension" />
         <attr name="ruler_smallMarkHeight" format="dimension" />
     </declare-styleable>
+    <!--手势密码属性-->
+    <declare-styleable name="GestureLock">
+        <attr name="line_width" format="dimension"/>
+        <attr name="line_normal_color" format="color"/>
+        <attr name="line_error_color" format="color" />
+    </declare-styleable>
+
 
 </resources>
