--- a/app/src/main/res/layout/userinfo_register_act.xml
+++ b/app/src/main/res/layout/userinfo_register_act.xml
@@ -90,6 +90,46 @@
                 android:maxLength="16"/>
         </LinearLayout>
         <LinearLayout
+            android:paddingBottom="@dimen/dpx016"
+            android:paddingTop="@dimen/dpx016"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <TextView
+                style="@style/textWhiteSub"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="确认密码："
+                />
+            <EditText
+                android:id="@+id/edt_pwd_repeat"
+                style="@style/editTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLength="16"/>
+        </LinearLayout>
+        <LinearLayout
+            android:paddingBottom="@dimen/dpx016"
+            android:paddingTop="@dimen/dpx016"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <TextView
+                style="@style/textWhiteSub"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="昵称："
+                />
+            <EditText
+                android:id="@+id/edt_nickname"
+                style="@style/editTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLength="16"/>
+        </LinearLayout>
+        <LinearLayout
             android:id="@+id/ly_verifyCode"
             android:paddingBottom="@dimen/dpx016"
             android:paddingTop="@dimen/dpx016"
@@ -123,23 +163,6 @@
                 android:text="获取验证码"
                 android:layout_marginLeft="@dimen/dpx012"
                 />
-
-        </LinearLayout>
-        <LinearLayout
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical|right"
-            >
-            <TextView
-                android:paddingBottom="@dimen/dpx016"
-                android:paddingTop="@dimen/dpx016"
-                android:id="@+id/text_findpwd"
-                style="@style/textWhiteLable.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="忘记密码？"/>
         </LinearLayout>
         <Button
             android:id="@+id/btn_submit"
@@ -148,27 +171,5 @@
             android:layout_height="wrap_content"
             android:text="登录"
             />
-        <LinearLayout
-            android:id="@+id/ly_fast_register"
-            android:layout_marginTop="@dimen/dpx080"
-            android:paddingBottom="@dimen/dpx006"
-            android:paddingTop="@dimen/dpx006"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical|right"
-            >
-            <TextView
-                style="@style/textWhiteSub"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="快速注册"
-                />
-            <ImageView
-                android:paddingLeft="@dimen/dpx012"
-                android:src="@mipmap/icon_register_navigation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
